<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="cancel" tools:ignore="ExtraTranslation">取消</string>
    <string name="RESULT_ROOM_NUM_NOT_EXIST" tools:ignore="ExtraTranslation">该会议室号不存在，请重新输入</string>
    <string name="top_title_attendee" tools:ignore="ExtraTranslation">参会人</string>
    <string name="join_meeting" tools:ignore="ExtraTranslation">加入会议</string>
    <string name="account_login_account_hint" tools:ignore="ExtraTranslation">用户名/邮箱/手机号</string>
    <string name="password" tools:ignore="ExtraTranslation">密码</string>
    <string name="about" tools:ignore="ExtraTranslation">关于</string>
    <string name="warn" tools:ignore="ExtraTranslation">提醒</string>
    <string name="non_wifi_tip" tools:ignore="ExtraTranslation">非无线网络环境下，接收视频会消耗您的数据流量，如果选择“仅接收音频”，您将无法接收视频和共享本地桌面</string>
    <string name="receive_video_data" tools:ignore="ExtraTranslation">接收音视频</string>
    <string name="receive_audio_data_only" tools:ignore="ExtraTranslation">仅接收音频</string>
    <string name="login_tip" tools:ignore="ExtraTranslation">提示消息</string>
    <string name="create_group" tools:ignore="ExtraTranslation">创建群组</string>
    <string name="call" tools:ignore="ExtraTranslation">呼叫</string>
    <string name="permission_fail" tools:ignore="ExtraTranslation">应用缺少必要的运行权限，请前往设置开启权限，否则将无法正常运行</string>
    <string name="to_android_setting" tools:ignore="ExtraTranslation">立即设置</string>
    <string name="cancel_tip" tools:ignore="ExtraTranslation">不再提醒</string>
    <string name="meeting_room_number_or_code" tools:ignore="ExtraTranslation">会议室号/邀请码</string>
    <string name="meetingui_camera_permission_denied" tools:ignore="ExtraTranslation">应用无法访问你的摄像头,请允许访问摄像头。</string>
    <string name="meetingui_camera_unknown_error" tools:ignore="ExtraTranslation">未能正常开启相机预览，是否再次尝试打开相机？</string>
    <string name="meetingui_settings_receive_video" tools:ignore="ExtraTranslation">开会时接收视频</string>
    <string name="meetingui_settings_receive_video_wifi" tools:ignore="ExtraTranslation">只在无线网络时</string>
    <string name="meetingui_settings_receive_video_wifi_and_data" tools:ignore="ExtraTranslation">无线网络和移动数据网络时</string>
    <string name="meetingui_settings_receive_video_no" tools:ignore="ExtraTranslation">不接收</string>
    <string name="meetingui_settings_no_interruption_meeting" tools:ignore="ExtraTranslation">会中免打扰</string>
    <string name="meetingui_settings_open_mic_after_join" tools:ignore="ExtraTranslation">入会打开麦克风</string>
    <string name="meetingui_settings_open_camera_after_join" tools:ignore="ExtraTranslation">入会打开摄像头</string>
    <string name="meetingui_settings_beauty_level" tools:ignore="ExtraTranslation">美颜</string>
    <string name="meetingui_settings_vflip" tools:ignore="ExtraTranslation">视频镜像</string>
    <string name="meetingui_settings_screen_setting" tools:ignore="ExtraTranslation">横竖屏设置</string>
    <string name="meetingui_settings_screen_tips" tools:ignore="ExtraTranslation">关闭后，会中只能横屏或者竖屏。</string>
    <string name="meetingui_settings_about" tools:ignore="ExtraTranslation">关于</string>
    <string name="meetingui_comma" tools:ignore="ExtraTranslation">，</string>
    <string name="meetingui_me" tools:ignore="ExtraTranslation">我</string>
    <string name="meetingui_search" tools:ignore="ExtraTranslation">搜索</string>
    <string name="meetingui_administrator" tools:ignore="ExtraTranslation">管理员</string>
    <string name="meetingui_main_speaker" tools:ignore="ExtraTranslation">主持人</string>
    <string name="meetingui_open_mic" tools:ignore="ExtraTranslation">打开音频</string>
    <string name="meetingui_close_mic" tools:ignore="ExtraTranslation">关闭音频</string>
    <string name="meetingui_open_camera" tools:ignore="ExtraTranslation">打开视频</string>
    <string name="meetingui_close_camera" tools:ignore="ExtraTranslation">关闭视频</string>
    <string name="meetingui_apply_main_speaker" tools:ignore="ExtraTranslation">申请主持人</string>
    <string name="meetingui_applying_main_speaker" tools:ignore="ExtraTranslation">主持人申请中</string>
    <string name="meetingui_give_up_applying_main_speaker" tools:ignore="ExtraTranslation">放弃主持人</string>
    <string name="meetingui_award_main_speaker" tools:ignore="ExtraTranslation">授予主持人</string>
    <string name="meetingui_cancel_main_speaker" tools:ignore="ExtraTranslation">取消主持人</string>
    <string name="meetingui_mute_all" tools:ignore="ExtraTranslation">全场静音</string>
    <string name="meetingui_applying_main_speaker_tips" tools:ignore="ExtraTranslation">您正在申请主持人</string>
    <string name="meetingui_give_up_applying_main_speaker_tips" tools:ignore="ExtraTranslation">您已放弃申请主持人</string>
    <string name="meetingui_have_main_speaker_right" tools:ignore="ExtraTranslation">您已成为主持人</string>
    <string name="meetingui_give_up_main_speaker_tips" tools:ignore="ExtraTranslation">您已放弃主持人</string>
    <string name="meetingui_mute_all_success" tools:ignore="ExtraTranslation">您已成功取消广播参会人的音频</string>
    <string name="meetingui_kick_user" tools:ignore="ExtraTranslation">请出会议室</string>
    <string name="meetingui_attendee_rename" tools:ignore="ExtraTranslation">修改昵称</string>
    <string name="meetingui_user_leaved" tools:ignore="ExtraTranslation">用户已经离开会议室</string>
    <string name="meetingui_apply_manager" tools:ignore="ExtraTranslation">申请管理员</string>
    <string name="meetingui_apply_manager_denied" tools:ignore="ExtraTranslation">当前会议室不允许申请管理员！</string>
    <string name="meetingui_abandon_manager" tools:ignore="ExtraTranslation">放弃管理员</string>
    <string name="meetingui_input_manager_pwd_hint" tools:ignore="ExtraTranslation">输入管理员密码</string>
    <string name="meetingui_give_up_manager_tips" tools:ignore="ExtraTranslation">您确定要放弃管理员权限？</string>
    <string name="meetingui_manager_pwd_wrong" tools:ignore="ExtraTranslation">管理员密码错误！</string>
    <string name="meetingui_permission_denied" tools:ignore="ExtraTranslation">用户权限不足</string>
    <string name="meetingui_sharing" tools:ignore="ExtraTranslation">正在共享</string>
    <string name="meetingui_recording" tools:ignore="ExtraTranslation">正在录制</string>
    <string name="meetingui_share" tools:ignore="ExtraTranslation">共享</string>
    <string name="meeting_attender" tools:ignore="ExtraTranslation">参会人</string>
    <string name="meetingui_chat" tools:ignore="ExtraTranslation">聊天</string>
    <string name="meetingui_more" tools:ignore="ExtraTranslation">更多</string>
    <string name="meetingui_quit_room" tools:ignore="ExtraTranslation">退出</string>
    <string name="please_quit_room" tools:ignore="ExtraTranslation">申请退出</string>
    <string name="meetingui_shared_select" tools:ignore="ExtraTranslation">选择共享</string>
    <string name="meetingui_switch_select" tools:ignore="ExtraTranslation">切换共享</string>
    <string name="meetingui_screen_shared" tools:ignore="ExtraTranslation">屏幕共享</string>
    <string name="meetingui_media_shared" tools:ignore="ExtraTranslation">媒体共享</string>
    <string name="meetingui_white_board" tools:ignore="ExtraTranslation">白板</string>
    <string name="meetingui_word" tools:ignore="ExtraTranslation">文档</string>
    <string name="meetingui_take_picture" tools:ignore="ExtraTranslation">拍照</string>
    <string name="meetingui_shared_photo" tools:ignore="ExtraTranslation">照片</string>
    <string name="meetingui_change_layout" tools:ignore="ExtraTranslation">切换布局</string>
    <string name="meetingui_follow_layout" tools:ignore="ExtraTranslation">跟随布局</string>
    <string name="meetingui_layout_data" tools:ignore="ExtraTranslation">数据</string>
    <string name="meetingui_layout_data_tile" tools:ignore="ExtraTranslation">数据+视频(平铺)</string>
    <string name="meetingui_layout_data_tile_pop" tools:ignore="ExtraTranslation">数据+视频(弹出)</string>
    <string name="meetingui_layout_video_split" tools:ignore="ExtraTranslation">视频均分 (均分)</string>
    <string name="meetingui_layout_video_focus_1" tools:ignore="ExtraTranslation">视频一焦点</string>
    <string name="meetingui_layout_video_focus_2" tools:ignore="ExtraTranslation">视频二焦点</string>
    <string name="meetingui_layout_video_one" tools:ignore="ExtraTranslation">一分屏</string>
    <string name="meetingui_layout_video_two" tools:ignore="ExtraTranslation">二分屏</string>
    <string name="meetingui_layout_video_pip" tools:ignore="ExtraTranslation">画中画</string>
    <string name="meetingui_layout_video_four" tools:ignore="ExtraTranslation">四分屏</string>
    <string name="meetingui_layout_video_six" tools:ignore="ExtraTranslation">六分屏</string>
    <string name="meetingui_invite" tools:ignore="ExtraTranslation">邀请</string>
    <string name="meetingui_setting" tools:ignore="ExtraTranslation">设置</string>
    <string name="meetingui_input_manager_password" tools:ignore="ExtraTranslation">请输入管理员密码</string>
    <string name="meetingui_manager_not_empty" tools:ignore="ExtraTranslation">管理员密码不能为空</string>
    <string name="meetingui_enable_mic" tools:ignore="ExtraTranslation">本地麦克风</string>
    <string name="meetingui_enable_camera" tools:ignore="ExtraTranslation">本地摄像头</string>
    <string name="meetingui_video_open" tools:ignore="ExtraTranslation">本地视频预览</string>
    <string name="meetingui_voice_stimulate" tools:ignore="ExtraTranslation">语音激励</string>
    <string name="meetingui_quit_meeting" tools:ignore="ExtraTranslation">结束会议</string>
    <string name="meetingui_confirm" tools:ignore="ExtraTranslation">确定</string>
    <string name="meetingui_cancel" tools:ignore="ExtraTranslation">取消</string>
    <string name="meetingui_quit_room_tips" tools:ignore="ExtraTranslation">你要退出会议还是结束会议?</string>
    <string name="meetingui_quit_room_restricted" tools:ignore="ExtraTranslation">退出会议后其他人继续会议,确定退出?</string>
    <string name="please_quit_room_restricted" tools:ignore="ExtraTranslation">申请退出会议后管理员将收到退出申请,确定申请退出?</string>
    <string name="meetingui_finish_meeting" tools:ignore="ExtraTranslation">结束会议,所有人退出会议</string>
    <string name="meetingui_temporary_quit_meeting" tools:ignore="ExtraTranslation">退出会议,其他人继续会议</string>
    <string name="meetingui_select_apply_for" tools:ignore="ExtraTranslation">举手</string>
    <string name="meetingui_select_give_apply" tools:ignore="ExtraTranslation">放下</string>
    <string name="meetingui_give_up_mic" tools:ignore="ExtraTranslation">您已关闭发言</string>
    <string name="meetingui_mic_applied" tools:ignore="ExtraTranslation">您已开启发言</string>
    <string name="meetingui_camera_opened" tools:ignore="ExtraTranslation">您已开启视频</string>
    <string name="meetingui_camera_closed" tools:ignore="ExtraTranslation">您已停止视频</string>
    <string name="meetingui_unmute" tools:ignore="ExtraTranslation">解除静音</string>
    <string name="meetingui_give_up_open" tools:ignore="ExtraTranslation">您已放弃申请</string>
    <string name="meetingui_apply_open_camera" tools:ignore="ExtraTranslation">您正在申请开启视频</string>
    <string name="meetingui_room_closed" tools:ignore="ExtraTranslation">对不起,临时会话已被关闭(%1$ss)</string>
    <string name="meetingui_mic" tools:ignore="ExtraTranslation">发言</string>
    <string name="meetingui_video" tools:ignore="ExtraTranslation">视频</string>
    <string name="server_port" tools:ignore="ExtraTranslation">端口号</string>
    <string name="ok" tools:ignore="ExtraTranslation">确定</string>
    <string name="needInputRoomPassword" tools:ignore="ExtraTranslation">需要输入会议密码才能加入。</string>
    <string name="ip_address" tools:ignore="ExtraTranslation">IP地址</string>
    <string name="client_id" tools:ignore="ExtraTranslation">clientId</string>
    <string name="client_secret" tools:ignore="ExtraTranslation">clientSecret</string>
    <string name="save" tools:ignore="ExtraTranslation">保存</string>
    <string name="legal_text_uri" translatable="false">0123456789qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM`~!@#$%^*()-_=+\|]}[{:\'./?\&#34;&#60;&#62;&#38;</string>
    <string name="open_all_voice">一键静音</string>
    <string name="close_all_voice">一键开麦</string>
    <string name="other_set">其它设置</string>
    <string name="set_horizontal">横屏模式</string>
    <string name="close_hear">一键闭音</string>
    <string name="open_hear">一键开音</string>
</resources>