<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/size_dp_298"
    android:layout_height="wrap_content"
    android:background="@drawable/btn_dialog_background"
    android:minHeight="@dimen/size_dp_148"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="@dimen/widthMax"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_20"
            android:text="@string/needInputRoomPassword"
            android:textColor="@color/textcolor_28282d"
            android:textSize="@dimen/textSizeMid" />

        <EditText
            android:id="@+id/edtTxt_room_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/paddingMin_10"
            android:cursorVisible="true"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:lineSpacingExtra="10dp"
            android:maxLength="16"
            android:singleLine="true"
            android:textColor="@color/textcolor_28282d"
            android:textColorHint="@color/textcolor_adb0b5"
            android:textCursorDrawable="@drawable/cursor_drawable"
            android:textSize="@dimen/textSizeMid"
            android:theme="@style/group_edit_style" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn48"
        android:gravity="end"
        android:layout_marginTop="@dimen/paddingMin_10"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btn48"
            android:layout_weight="1"
            android:background="@drawable/rect_left_button"
            android:text="@string/cancel"
            android:textColor="@color/textcolor_28282d"
            android:textSize="@dimen/min_sp_16" />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btn48"
            android:layout_weight="1"
            android:background="@drawable/rect_right_button"
            android:text="@string/ok"
            android:textColor="@drawable/input_password_dialog_button_state"
            android:textSize="@dimen/min_sp_16" />
    </LinearLayout>


</LinearLayout>