<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu_root_layout"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_120"
    tools:ignore="MotionLayoutInvalidSceneFileReference">




    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/menu_content_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/color_2B2F3D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.55">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_menu_mic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/select_mic_stop_speak_state"
            android:gravity="center"
            android:text="@string/meetingui_mic"
            android:textColor="#ffffff"
            android:textSize="@dimen/min_sp_10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/tv_menu_camera"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_menu_camera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/select_camera_stop_state"
            android:gravity="center"
            android:text="@string/meetingui_video"
            android:textColor="@color/white"
            android:textSize="@dimen/min_sp_10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@+id/tv_menu_mic"
            app:layout_constraintRight_toLeftOf="@+id/tv_menu_share"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_menu_share"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableTop="@drawable/selector_menu_share_state"
            android:gravity="center"
            android:text="@string/meetingui_share"
            android:textColor="@color/white"
            android:textSize="@dimen/min_sp_10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@+id/tv_menu_camera"
            app:layout_constraintRight_toLeftOf="@+id/tv_menu_attender"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/tv_menu_quit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableTop="@mipmap/tb_out"
            android:gravity="center"
            android:text="@string/meetingui_quit_room"
            android:textColor="@color/white"
            android:textSize="@dimen/min_sp_10"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@+id/tv_menu_share"
            app:layout_constraintRight_toLeftOf="@+id/tv_menu_more"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_menu_attender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableTop="@drawable/selector_menu_attender_state"
            android:gravity="center"
            android:text="@string/meeting_attender"
            android:textColor="@color/white"
            android:textSize="@dimen/min_sp_10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@+id/tv_menu_share"
            app:layout_constraintRight_toLeftOf="@+id/tv_menu_more"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_menu_more"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableTop="@drawable/selector_menu_more_state"
            android:gravity="center"
            android:text="@string/meetingui_more"
            android:textColor="@color/white"
            android:textSize="@dimen/min_sp_10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@+id/tv_menu_attender"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--    共享工具条-->
    <include layout="@layout/meeting_shared_tool_bar" />

</androidx.constraintlayout.motion.widget.MotionLayout>